2007-08-07  Tor Lillqvist  <tml@novell.com>

	* modules/Makefile.am: Add libgimpcolor to cdisplay_libadd.

2007-08-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/png.c (save_image): in the absence of an
	embedded color profile, write the sRGB chunk.

2007-08-07  Sven Neumann  <sven@gimp.org>

	* app/core/gimppalette-import.c
	* app/core/gimppalette-load.[ch]: applied slightly modified version
	of a patch from Nicola Archibald that adds support for importing
	Adobe Color palette version 1 files (bug #316618).

2007-08-07  Sven Neumann  <sven@gimp.org>

	* app/gui/gui-vtable.c (gui_pdb_dialog_new): as a workaround for
	bug #360106, set a timeout that presents the dialog window.

	* app/widgets/gimppdbdialog.c (gimp_pdb_dialog_set_property):
	formatting.

2007-08-07  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage.c (gimp_image_get_icc_profile): return NULL
	if the parasite exists but it is empty.

2007-08-07  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpwidgetstypes.h: removed leftover typedef
	for GimpResolutionEntry.

	* plug-ins/common/poppler.c: added the typedef here.

2007-08-07  Sven Neumann  <sven@gimp.org>

	* app/plug-in/Makefile.am
	* app/plug-in/plug-in-error.[ch]: new files defining the
	GimpPlugIn error domain.

	* app/plug-in/plug-in-icc-profile.c (plug_in_icc_profile_apply_rgb):
	set an error code.

	* app/file/file-open.c (file_open_profile_apply_rgb): only do the
	profile conversion if color management is enabled. If the plug-in
	is missing, show a warning and disable color management.
	Fixes bug #434205.

	* modules/cdisplay_lcms.c (cdisplay_lcms_get_rgb_profile): check
	if we actually got a profile before checking its color space.

2007-08-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-scripts.c (script_fu_menu_map):
	added more mappings from old to new Script-Fu menu locations.

2007-08-06  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolordisplay.[ch]: added GimpColorConfig and